--- a/client/package.json
+++ b/client/package.json
@@ -42,6 +42,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.14",
+    "prettier": "^2.7.1",
     "tailwindcss": "^3.1.7"
   }
 }
