--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.27.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
+    "crypto-js": "^4.1.1",
     "dotenv": "^16.0.3",
     "express": "^4.18.1",
     "mongodb": "^4.10.0",
